tests/vendor/valid/simple/kw_var_name.c
//expect 5
//tags: simple
int main() {
    int return_val = 3;
    int void2 = 2;
    return return_val + void2;
}