tests/vendor/invalid/syntax/malformed_ne.c
//tags: simple
int main() { return 3 ! = 7; }